[gd_scene load_steps=2 format=3 uid="uid://c8y5gs633ffq"]

[ext_resource type="Script" path="res://menu/Victory.gd" id="1_victory"]

[node name="Victory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_victory")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.5, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "VOCÊ VENCEU!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Parabéns! Você derrotou todos os inimigos!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Estatísticas finais"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Voltar ao Menu Principal"
